🐛 FIX: Directory Employee Documentation
Add missing data: {} object to documentation
